kubernetes/platform/elastic-stack/app/components/httproute/elasticsearch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch-http-route
  labels:
    app.kubernetes.io/instance: elasticsearch
    app.kubernetes.io/name: elasticsearch
spec:
  parentRefs:
    - name: kube-gateway
  hostnames:
    - elasticsearch.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: efk-es-http
          port: 9200
